// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders main branch 1`] = `
<tr>
  <td>
    <BranchIcon
      branch={
        Object {
          "isMain": true,
          "name": "master",
        }
      }
      className="little-spacer-right"
    />
    master
    <div
      className="outline-badge spacer-left"
    >
      branches.main_branch
    </div>
  </td>
  <td
    className="thin nowrap text-right"
  >
    <BranchStatus
      branch={
        Object {
          "isMain": true,
          "name": "master",
        }
      }
    />
  </td>
  <td
    className="thin nowrap text-right"
  />
  <td
    className="thin nowrap text-right"
  >
    <div
      className="dropdown big-spacer-left"
    >
      <button
        className="dropdown-toggle little-spacer-right button-compact"
        data-toggle="dropdown"
      >
        <SettingsIcon
          style={
            Object {
              "marginTop": 4,
            }
          }
        />
         
        <i
          className="icon-dropdown"
        />
      </button>
      <ul
        className="dropdown-menu dropdown-menu-right"
      >
        <li>
          <a
            className="js-rename link-no-underline"
            href="#"
            onClick={[Function]}
          >
            branches.rename
          </a>
        </li>
      </ul>
    </div>
  </td>
</tr>
`;

exports[`renders short-living branch 1`] = `
<tr>
  <td>
    <BranchIcon
      branch={
        Object {
          "analysisDate": "2017-09-27T00:05:19+0000",
          "isMain": false,
          "mergeBranch": "foo",
          "name": "feature",
          "type": "SHORT",
        }
      }
      className="little-spacer-right big-spacer-left"
    />
    feature
  </td>
  <td
    className="thin nowrap text-right"
  >
    <BranchStatus
      branch={
        Object {
          "analysisDate": "2017-09-27T00:05:19+0000",
          "isMain": false,
          "mergeBranch": "foo",
          "name": "feature",
          "type": "SHORT",
        }
      }
    />
  </td>
  <td
    className="thin nowrap text-right"
  >
    <DateFromNow
      date="2017-09-27T00:05:19+0000"
    />
  </td>
  <td
    className="thin nowrap text-right"
  >
    <div
      className="dropdown big-spacer-left"
    >
      <button
        className="dropdown-toggle little-spacer-right button-compact"
        data-toggle="dropdown"
      >
        <SettingsIcon
          style={
            Object {
              "marginTop": 4,
            }
          }
        />
         
        <i
          className="icon-dropdown"
        />
      </button>
      <ul
        className="dropdown-menu dropdown-menu-right"
      >
        <li>
          <a
            className="js-delete link-no-underline"
            href="#"
            onClick={[Function]}
          >
            branches.delete
          </a>
        </li>
      </ul>
    </div>
  </td>
</tr>
`;
